# M31-universal-heap

./: LICENSE  README.md
C/KERN_PANIC/: ..module-common.o.cmd  .Module.symvers.cmd  .modules.order.cmd  .panic.ko.cmd  .panic.mod.cmd  .panic.mod.o.cmd  .panic.o.cmd  Makefile  mainual.md  modules.order  panic.c  panic.ko  panic.mod  panic.mod.c
cpp/calc/new/: CMakeLists.txt
cpp/calc/new/src/: additional_math.cpp  additional_math.h  calculate.cpp  calculate.h  main.cpp
cpp/calc/old/: calc  main.cpp
cpp/pmn/: .compile  list.txt  main.cpp  pmenu
cpp/qst/: Ex4.cpp
